añado gif de cherk bailando

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <p> Esta es mi primer pagina web posteada en github y es una pagina web de prueba
         <br>
         Aca les dejo un gif perrón :</p>
-<p> img src="https://statics.memondo.com/p/s1/gifs/2021/08/GIF_1250100_87ccd8f2e8974e0699e50034cc0cdda8_no_deja_de_intentarlo_tiene_un_espiritu_inquebrantable.webm"</p>    
+<p> <img src="https://c.tenor.com/7fSz0NE-AAIAAAAd/dancing-shrek.gif"/></p>    
 </body>
 </html>
